# gemm4-attention-kernels

./: .gitignore  LICENSE  README.md  pixi.toml
splitd-flash-attn/: pyproject.toml
splitd-flash-attn/assets/bench_splitd_512_gqa_bs16k/: metrics.csv  metrics.json
splitd-flash-attn/scripts/: bench_splitd_512_gqa_bs16k.py
splitd-flash-attn/src/: __init__.py  bench_utils.py  block_info.py  cache_utils.py  cute_dsl_ptxas.py  cute_dsl_utils.py  fa_logging.py  flash_bwd_preprocess.py  flash_fwd_sm90_d512.py  fmha_dkdv_sm90_d512.py  fmha_dq_sm90_d512.py  interface.py  mask.py  named_barrier.py  pack_gqa.py  pipeline.py  runtime.py  seqlen_info.py  softmax.py  testing.py  tile_scheduler.py  utils.py
splitd-flash-attn/tests/: test_flash_fwd_splitd_sdpa.py
